--- a/scss/components/_fontface.scss
+++ b/scss/components/_fontface.scss
@@ -1,8 +1,6 @@
 @font-face {
   font-family: 'ITC Avant Garde Pro';
-  src:
-    url('../fonts/ITCAvantGardePro-Bold.woff2') format('woff2'),
-    url('../fonts/ITCAvantGardePro-Bold.woff') format('woff');
+  src: url('../fonts/ITCAvantGardePro-Bold.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -10,9 +8,7 @@
 
 @font-face {
   font-family: 'ITC Avant Garde Pro';
-  src:
-    url('../fonts/ITCAvantGardePro-XLt.woff2') format('woff2'),
-    url('../fonts/ITCAvantGardePro-XLt.woff') format('woff');
+  src: url('../fonts/ITCAvantGardePro-XLt.woff') format('woff');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -20,9 +16,7 @@
 
 @font-face {
   font-family: 'ITC Avant Garde Pro';
-  src:
-    url('../fonts/ITCAvantGardePro-Bk.woff2') format('woff2'),
-    url('../fonts/ITCAvantGardePro-Bk.woff') format('woff');
+  src: url('../fonts/ITCAvantGardePro-Bk.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
